# bare-metal-idris

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/hello-world/: CMakeLists.txt  Main.idr
apps/led-blink/: CMakeLists.txt  Main.idr  busywait.c  busywait.h
tools/CMake/: Idris.cmake  top-level.cmake
